--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Narrative Website</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Google fonts-->
@@ -15,13 +15,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,500;0,600;0,700;1,300;1,500;1,600;1,700&amp;display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,400&amp;display=swap" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
+           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> 
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- Navigation-->
+        <!-- header-->
+        <header>
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
             <div class="container px-5">
-                <a class="navbar-brand fw-bold" href="index.html">Start Bootstrap</a>
+                <img class="logo" src="assets/img/logo-alt.png">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="bi-list"></i>
@@ -29,27 +31,23 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                         <li class="nav-item"><a class="nav-link me-lg-3" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-one.html">Page One</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-one.html">Introdcution</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-two.html">VR Set Up Guide</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-three.html">Benefits & apps</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-four.html">Resources</a></li>
                     </ul>
 
                 </div>
             </div>
         </nav>
-        <!-- Mashead header-->
-        <header class="masthead" id="top">
+    </header>
+        <!-- hero-section-->
+        <main class="homepage-hero">
             <div class="container px-5">
-                <div class="row gx-5 align-items-center">
-                    <div class="col-lg-12">
-                        <!-- Masthead text-->
-                        <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-1 lh-1 mb-3">Homepage</h1>
-                            <p class="lead fw-normal text-muted mb-5">Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
-                        </div>
-                    </div>
-                </div>
             </div>
-        
-        </header>
+                
+           <!-- hero-section text-->
+         </main>
         <!-- Quote/testimonial aside-->
         <aside class="text-center bg-gradient-primary-to-secondary mt-1" id="bigquote">
             <div class="container px-5">
@@ -70,7 +68,7 @@
                 <p class="lead fw-normal text-muted mb-5 mb-lg-0">Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
             </div>
             <div class="col-sm-8 col-md-6">
-                <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle" src="https://source.unsplash.com/u8Jn2rzYIps/900x900" alt="..." /></div>
+                <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle" src="assets/img/man-vr.jpg" alt="senior with vr headset on" /></div>
             </div>
         </div>
     </div>
