--- a/page-one.html
+++ b/page-one.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>New Age - Start Bootstrap Theme</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <title>Introduction to VR for seniors </title>
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Google fonts-->
@@ -21,7 +21,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
             <div class="container px-5">
-                <a class="navbar-brand fw-bold" href="index.html">Start Bootstrap</a>
+                <img class="logo" src="assets/img/logo-alt.png">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="bi-list"></i>
@@ -29,7 +29,10 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                         <li class="nav-item"><a class="nav-link me-lg-3" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-one.html">Page One</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-one.html">Introudction</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-two.html">VR Set Up Guide</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-three.html">Benefits & apps</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-four.html">Resources</a></li>
                     </ul>
 
                 </div>
@@ -42,7 +45,7 @@
                     <div class="col-lg-12">
                         <!-- Masthead text-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-1 lh-1 mb-3">Page One</h1>
+                            <h1 class="display-1 lh-1 mb-3">Introduction to Vr for seniors</h1>
                             <p class="lead fw-normal text-muted mb-5">Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
                         </div>
                     </div>
