--- a/page-three.html
+++ b/page-three.html
@@ -26,8 +26,8 @@
                     Menu
                     <i class="bi-list"></i>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
+                <div class="collapse navbar-collapse mobile-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0 mobile-navabr">
                         <li class="nav-item"><a class="nav-link me-lg-3" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link me-lg-3" href="page-one.html">Introduction</a></li>
                         <li class="nav-item"><a class="nav-link me-lg-3" href="page-two.html">VR Set Up Guide</a></li>
