making homepage responsive
made video size responsive
changing menu collapse on mobile

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a class="nav-link me-lg-3" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link me-lg-3" href="page-one.html">Introdcution</a>
+              <a class="nav-link me-lg-3" href="page-one.html">Introduction</a>
             </li>
             <li class="nav-item">
               <a class="nav-link me-lg-3" href="page-two.html">VR Set Up Guide</a>
@@ -71,7 +71,7 @@
 
 
   <!-- Quote/testimonial aside -->
-  <section class="text-left bg-gradient-primary-to-secondary1 mt-1 about_this" id="bigquote">
+  <section class="text-left bg-gradient-primary-to-secondary1 mt-1 about_this">
     <div class="container-about-this-guide">
       <h2>About this guide</h2>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis in expedita praesentium voluptate quidem
@@ -80,13 +80,13 @@
     </div>
   </section>
 
-  <!-- <section>
+  <section>
     <div class="video-header">
       <h3>Seniors with Limited Mobility Explore VR Travel</h3>
     </div>
 
     <div class="homepage_video">
-      <iframe width="1400" height="700"
+      <iframe class="homepage_vid_prop" width="1400" height="700"
         src="https://www.youtube-nocookie.com/embed/a3kwztYUueQ?si=Wrw91tMC1iW6q5TQ&amp;start=27"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -97,7 +97,7 @@
         lives with VR technology from Rendever. <br> Want to experience this and more? Explore this simplified guide to
         get started on <span class="vid-des-ur">your</span> VR journey now.</p>
     </div>
-  </section> -->
+  </section> 
 
 
   <!-- Basic features section-->
