--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </div>
 
 
-  <!-- Quote/testimonial aside -->
+  
   <section class="text-left bg-gradient-primary-to-secondary1 mt-1 about_this">
     <div class="container-about-this-guide">
       <h2>About this guide</h2>
@@ -82,7 +82,7 @@
 
   <section>
     <div class="video-header">
-      <h3>Seniors with Limited Mobility Explore VR Travel</h3>
+      <h3 class="vid-h3">Seniors with Limited Mobility Explore VR Travel</h3>
     </div>
 
     <div class="homepage_video">
@@ -94,35 +94,31 @@
     </div>
     <div class="video-description-container">
       <p class="video-description"> Here is a short video of how caregivers at Maplewood Senior Living uplift seniors'
-        lives with VR technology from Rendever. <br> Want to experience this and more? Explore this simplified guide to
+        lives with VR technology from Rendever. Want to experience this and more? Explore this simplified guide to
         get started on <span class="vid-des-ur">your</span> VR journey now.</p>
     </div>
   </section> 
 
 
   <!-- Basic features section-->
-  <!-- <section class="bg-light" id="promo">
-    <div class="container px-5">
-      <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
-        <div class="col-12 col-lg-5 wellness-container">
+   <section class="more-info-sec">
           <h3 class="wellness-header">Wellness benefits</h3>
-          <p class="lead fw-normal text-muted mb-5 mb-lg-0">
+          <p class="wellness-p">
             Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
             enim ad minim veniam, quis nostrud exercitation ullamco laboris
             nisi ut aliquip ex ea commodo consequat
           </p>
-          <button class="hero-btn">Learn more</button>
-        </div>
-        <div class="col-sm-8 col-md-6">
-          <div class="px-5 px-sm-0">
-            <img class="img-fluid rounded-circle" src="assets/img/homepage-benefits.png"
-              alt="senior with vr headset on" />
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
+          <button class="hero-btn learn-more-btn">Learn more</button>
+  </section> 
+
+   
+    <div class="wellness-img-container">
+      <img class="wellness_img_homepage" src="assets/img/homepage-benefits.png"
+        alt="senior with vr headset on" />
+  </div> 
+
+
 <!-- 
   <section class="explore_section">
     <div class="explore_boxes">
