changed homepage responsiveness

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <i class="bi-list"></i>
         </button>
         <div class="collapse navbar-collapse mobile-collapse mobile-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0 mobile-navabr">
+          <ul class="navbar-nav  mobile-navabr">
             <li class="nav-item">
               <a class="nav-link me-lg-3" href="index.html">Home</a>
             </li>
@@ -86,7 +86,7 @@
     </div>
 
     <div class="homepage_video">
-      <iframe class="homepage_vid_prop" width="1400" height="700"
+      <iframe class="homepage_vid_prop" width="50%" height="100%"
         src="https://www.youtube-nocookie.com/embed/a3kwztYUueQ?si=Wrw91tMC1iW6q5TQ&amp;start=27"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -101,23 +101,35 @@
 
 
   <!-- Basic features section-->
-   <section class="more-info-sec">
-          <h3 class="wellness-header">Wellness benefits</h3>
-          <p class="wellness-p">
-            Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-            enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            nisi ut aliquip ex ea commodo consequat
-          </p>
-          <button class="hero-btn learn-more-btn">Learn more</button>
-  </section> 
+  <section class="more-info-sec">
+  
+    <div class="bs-container">
+
+      <div class="welness-container">
+      <h3 class="wellness-header">Wellness benefits</h3>
+      <p class="wellness-p">
+        Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+        enim ad minim veniam, quis nostrud exercitation ullamco laboris
+        nisi ut aliquip ex ea commodo consequat
+      </p>
+      <button class="hero-btn learn-more-btn">Learn more</button>
+      </div>
+  
+      <div class="wellness-img-container">
+        <img class="wellness_img_homepage" src="assets/img/homepage-benefits.png" alt="senior with vr headset on" />
+      </div>
+  
+    </div>
+
+  </section>
+
+
 
    
-    <div class="wellness-img-container">
-      <img class="wellness_img_homepage" src="assets/img/homepage-benefits.png"
-        alt="senior with vr headset on" />
-  </div> 
 
+
+  
 
 <!-- 
   <section class="explore_section">
