resized elements, made more responsive

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="vid-section">
     <div class="video-header">
       <h3 class="vid-h3">Seniors with Limited Mobility Explore VR Travel</h3>
     </div>
@@ -125,21 +125,33 @@
   </section>
 
 
+  <section class="why-now">
+    <h3>Why now?</h3>
 
-   
+    <p class="why-now-p">Now is the perfect time to get into the Virtual Reality scene. Thanks to the fast advancement of VR technology, it
+      has become more accessible and user friendly for seniors than ever. Roll back the years again and experience places
+      you have never been to through jaw dropping virtual tours and immersive games. Escape reality and experience things
+      beyond your imagination, all from the comfort of your home. </p>
+
+    <p class="why-now-p">A study conducted by the Sheridan Centre for Elder Research in collaboration with a national provider of retirement
+      and LTC (long-term-care) homes, aimed to study the potential impact of VR experiences on the well being of its
+      residents. Results of this study highlighted that these VR experiences had a positive impact on well-being in LTC
+      homes whilst also being cost effective (Chaze et al., 2022). </p>
+
+  </section>
 
 
-  
 
-<!-- 
   <section class="explore_section">
+    <h3 class="explore_section-h3">Explore</h3>
     <div class="explore_boxes">
+
+      
       <div class="explorebx box1">
 
         <img src="assets/img/budi.png" alt="" height="340px" width="476px">
         <div class="explore_border">
-          <h3>new to vr?</h3>
-          <p>lorem mekmfkme kmfkmekmfe </p>
+          <h3>What is vr?</h3>
           <button class="hero-btn">Learn more</button>
         </div>
       </div>
@@ -147,14 +159,13 @@
 
         <img src="assets/img/budi.png" alt="" height="340px" width="476px">
         <div class="explore_border">
-          <h3>new to vr?</h3>
-          <p>lorem mekmfkme kmfkmekmfe </p>
+          <h3>Resources</h3>
           <button class="hero-btn">Learn more</button>
         </div>
       </div>
 
     </div>
-  </section> -->
+  </section>
 
   <!--contact us-->
   <!-- <section class="contact_us">
@@ -165,7 +176,7 @@
   </section> -->
 
   <!-- Footer-->
-  <!-- <footer class="social-contact_us">
+  <footer class="social-contact_us">
 
       <p class="guide-text-footer">
         Guide For Seniors.
@@ -189,7 +200,7 @@
       <a href="#" class="icon facebook" target="_blank" rel=""><i class="fa-brands fa-facebook fa-2xl"
           style="color: #000000;"></i><span class="faceb2">Facebook</span></a>
     </div>
-  </footer> -->
+  </footer>
 
 
   <!-- Bootstrap core JS-->
