--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@
     </div>
     <p class="footer_text_bottom">agewellvr</p>
     
-    <div class="social-contact_us_container-icon2">
+    <!-- <div class="social-contact_us_container-icon2">
       <a href="#" class="icon twitter" target="_blank" rel=""><i class="fa-brands fa-x-twitter fa-2xl"
         style="color: #000000;"></i><span class="twitt2">Twitter</span></a>
         <a href="#" class="icon instagram" target="_blank" rel=""><i class="fa-brands fa-instagram fa-2xl"
           style="color: #000000;"></i><span class="insta2">instagram</span></a>
       <a href="#" class="icon facebook" target="_blank" rel=""><i class="fa-brands fa-facebook fa-2xl"
           style="color: #000000;"></i><span class="faceb2">Facebook</span></a>
-    </div>
+    </div> -->
   </footer>
 
 
