--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <a class="nav-link me-lg-3" href="page-two.html">VR Set Up Guide</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link me-lg-3" href="page-three.html">Benefits & apps</a>
+              <a class="nav-link me-lg-3" href="page-three.html">Benefits</a>
             </li>
             <li class="nav-item">
               <a class="nav-link me-lg-3" href="page-four.html">Resources</a>
