--- a/page-one.html
+++ b/page-one.html
@@ -28,7 +28,7 @@
                         <li class="nav-item"><a class="nav-link me-lg-3" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link me-lg-3" href="page-one.html">Introudction</a></li>
                         <li class="nav-item"><a class="nav-link me-lg-3" href="page-two.html">VR Set Up Guide</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-three.html">Benefits & apps</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-three.html">Benefits</a></li>
                         <li class="nav-item"><a class="nav-link me-lg-3" href="page-four.html">Resources</a></li>
                     </ul>
 
