--- a/page-two.html
+++ b/page-two.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a class="nav-link me-lg-3" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link me-lg-3" href="page-one.html">Introduction</a></li>
                         <li class="nav-item"><a class="nav-link me-lg-3" href="page-two.html">VR Set Up Guide</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-three.html">Benefits & apps</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-three.html">Benefits</a></li>
                         <li class="nav-item"><a class="nav-link me-lg-3" href="page-four.html">Resources</a></li>
                     </ul>
 
@@ -46,7 +46,7 @@
                         <!-- Masthead text-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-1 lh-1 mb-3 vrx-h1">Your VR Experience Made Easy</h1>
-                            <p class="lead fw-normal text-muted mb-5 vrx-p"> Trying something new can be a little intimidating, but dont worry, this page guides you through a simple step by step process to get your VR headset runnning.</p>
+                            <p class="vrx-p"> Trying something new can be a little intimidating, but dont worry, this page guides you through a simple step by step process to get your VR headset runnning.</p>
 
                             <div class="vr-f-step">
                             <h2 class="vrx-h2">Your first </h2>
@@ -87,5 +87,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+
+       <!--maps--> <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"> </script>
     </body>
 </html>
