--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>Narrative Website</title>
+  <title>AgeWellVR homepage</title>
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
   <!-- Bootstrap icons-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
@@ -30,42 +30,31 @@
 
 <body id="page-top">
   <!-- header-->
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
-      <div class="container px-5 con">
-        <img class="logo" src="assets/img/logo-alt.png" />
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-          aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="bi-list"></i>
-        </button>
-        <div class="collapse navbar-collapse mobile-collapse mobile-collapse" id="navbarResponsive">
-          <ul class="navbar-nav  mobile-navabr">
-            <li class="nav-item">
-              <a class="nav-link me-lg-3" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link me-lg-3" href="page-one.html">Introduction</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link me-lg-3" href="page-two.html">VR Set Up Guide</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link me-lg-3" href="page-three.html">Benefits</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link me-lg-3" href="page-four.html">Resources</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
+          <div class="container px-5">
+              <img class="logo" src="assets/img/logo-alt.png">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                  Menu
+                  <i class="bi-list"></i>
+              </button>
+              <div class="collapse navbar-collapse mobile-collapse" id="navbarResponsive">
+                  <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0 mobile-navabr">
+                      <li class="nav-item"><a class="nav-link me-lg-3" href="index.html">Home</a></li>
+                      <li class="nav-item"><a class="nav-link me-lg-3" href="Introduction.html">Introduction</a></li>
+                      <li class="nav-item"><a class="nav-link me-lg-3" href="Set-up-guide.html">VR Set Up Guide</a></li>
+                      <li class="nav-item"><a class="nav-link me-lg-3" href="Benefits.html">Benefits</a></li>
+                      <li class="nav-item"><a class="nav-link me-lg-3" href="RecommendedApps.html.html">Recommended Apps</a></li>
+                  </ul>
+
+              </div>
+          </div>
+      </nav>
   <!-- hero-section-->
   <div class="homepage-hero">
     <div class="hero-section">
       <h1 class="hero-h1">Virtual Reality: Your Gateway To Well-Being</h1>
-      <button a href="#abtg" class="hero-btn" id="exp-btn  abtg">Explore Now</button>
+      <a href="#abtg"><button class="hero-btn" id="exp-btn">Explore Now</button></a>
     </div>
   </div>
 
@@ -74,9 +63,7 @@
   <section class="text-left bg-gradient-primary-to-secondary1 mt-1 about_this">
     <div class="container-about-this-guide" id="abtg">
       <h2>About this guide</h2>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis in expedita praesentium voluptate quidem
-        recusandae quam doloribus quod cum libero cupiditate a sapiente, hic unde. Necessitatibus blanditiis tenetur
-        officia</p>
+      <p>Welcome to this Virtual reality guide for seniors. This guide aims to introduce you to VR technology regardless of experience, whether you are new to this or willing to explore further, this guide offers everything that you need to know in a simple and user-friendly format. Throughout this guide, you will expect to see the following: step-by-step instructions, benefits of VR on seniors, great app recommendations and additional Recommended Apps</p>
     </div>
   </section>
 
@@ -109,12 +96,9 @@
       <div class="welness-container">
       <h3 class="wellness-header">Wellness benefits</h3>
       <p class="wellness-p">
-        Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-        enim ad minim veniam, quis nostrud exercitation ullamco laboris
-        nisi ut aliquip ex ea commodo consequat
+        VR Is not just an escape from reality, it has been proven to benefit seniors in many different ways, such as improving mental and physical health and is a great tool for cognitive stimulation. However these aren’t the only benefits, click the learn more button below to explore the range of benefits that come along with VR.
       </p>
-      <button class="hero-btn learn-more-btn" id="lmb-2">Learn more</button>
+     <a href="Benefits.html"> <button class="hero-btn learn-more-btn" id="lmb-2">Learn more</button> </a>
       </div>
   
       <div class="wellness-img-container">
@@ -150,25 +134,26 @@
       
       <div class="explorebx box1">
 
-        <img src="assets/img/budi.png" alt="">
+        <img src="assets/img/vr-headset.jpg" alt="">
         <!-- height="340px" width="476px -->
         <div class="explore_border">
           <h3>What is vr?</h3>
-          <button class="hero-btn" id="ex-btn">Learn more</button>
+          <a href="Introduction.html"><button class="hero-btn" id="ex-btn">Learn more</button></a>
         </div>
       </div>
       <div class="explorebx box2">
 
         <img src="assets/img/budi.png" alt="">
         <div class="explore_border">
-          <h3>Resources</h3>
-          <button class="hero-btn" id="ex-btn">Learn more</button>
+          <h3>Recommended Apps</h3>
+          <a href="RecommendedApps.html"><button class="hero-btn" id="ex-btn">Learn more</button></a>
         </div>
       </div>
 
     </div>
   </section>
 
+ 
   <!--contact us-->
   <!-- <section class="contact_us">
     <div class="contact_us_container">     
