--- a/Introduction.html
+++ b/Introduction.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Introduction to VR for seniors </title>
+        <title>Introduction</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
@@ -35,10 +35,10 @@
                 <div class="collapse navbar-collapse mobile-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0 mobile-navabr">
                         <li class="nav-item"><a class="nav-link me-lg-3" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-one.html">Introduction</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-two.html">VR Set Up Guide</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-three.html">Benefits</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-four.html">Resources</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="Introduction.html">Introduction</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="Set-up-guide.html">VR Set Up Guide</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="Benefits.html">Benefits</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="RecommendedApps.html">Recommended Apps</a></li>
                     </ul>
 
                 </div>
@@ -73,7 +73,7 @@
             <h3 class="getting-started_vr_h3">Getting started  with VR</h3>
             <p class="getting-started_vr_p"> Getting started with VR for your first time can be difficult to, so before you decide to purchase your first VR headset, there are various factors to consider, like picking the right VR headset, equipment compatible to your needs and more. To find out more navigate through this accordion down below to take your first steps in to virtual reality scene.</p>
 
-            <button class="hero-btn btn-hero-pg1 " id="gt-btn" >Learn more</button>
+           <a href="Set-up-guide.html"><button class="hero-btn btn-hero-pg1 " id="gt-btn" >Learn more</button></a>
         </section>
 
 
@@ -89,32 +89,31 @@
 
 
                     <ul>
-                        <h4>Advantages</h4>
-                        <li>ease of use - light weight, easy to set up</li>
-                        <li>portability</li>
-                        <li>compatibility - most can be used with PC's</li>
-                        <li>user friendly interface</li>
-                        <li>affordability - compared to other vr systems like PC VR headsets, these headsets are priced at a much reasonable
-                            price.</li>
-                        <li>wireless</li>
-                        <li>additional accessories can be bought to improve comfort and fit</li>
+                        <h4> <strong>Advantages</strong> </h4>
+                        <li> <strong>ease of use -</strong>  light weight, easy to set up</li>
+                        <li> <strong>portability</strong></li>
+                        <li> <strong>compatibility -</strong> most can be used with PC's</li>
+                        <li> <strong>user friendly interface</strong> </li>
+                        <li> <strong>affordability -</strong> compared to other vr systems like PC VR headsets, these headsets are priced at a much reasonable price.</li>
+                        <li> <strong>wireless</strong></li>
+                        <li> <strong>additional accessories - </strong> can be bought to improve comfort and fit</li>
                     </ul>
 
                     <ul>
-                        <h4> Disadvantages</h4>
-                        <li>battery life - as they are battery powered stand-alone headsets, they require to be charged </li>
-                        <li>processing power- they have lower processing power compared to High end PC VR headsets, which means lower
+                        <h4> <strong>Disadvantages</strong></h4>
+                        <li> <strong>battery life - </strong> as they are battery powered stand alone headsets, they require to be charged </li>
+                        <li>  <strong>processing power -</strong> they have lower processing power compared to High end PC VR headsets, which means lower
                             quality and performance.</li>
-                        <li>limited content compared to PC VR headsets as they have the capability to play PC VR games</li>
+                        <li> <strong>limited content - </strong> compared to PC VR headsets as they have the capability to play PC VR games</li>
 
                     </ul>
 
                     <ul>
-                        <h4> Price</h4>
-                        <li>meta quest 2 - £249.99</li>
-                        <li>pico 4 - £339</li>
-                        <li>meta quest 3- £479 (128gb model) £619 (512gb model)</li>
-                        <li>valve index - £919(full kit)</li>
+                        <h4> <strong>Price</strong></h4>
+                        <li><strong>meta quest 2 -</strong> £249.99</li>
+                        <li><strong>pico 4 -</strong> £339</li>
+                        <li> <strong>meta quest 3- </strong>£479 (128gb model) £619 (512gb model)</li>
+                        <li> <strong>valve index - </strong> £919(full kit)</li>
                     </ul>
             
                 </div> 
@@ -124,15 +123,15 @@
                 <input type="radio" name="accordian" id="second">
                 <div class="content">
                     <br>
-                    <h4>controller straps/grips</h4>
+                    <h4><strong>controller straps/grips</strong></h4>
                     <p>these are perfect to prevent accidental drops and these grips improve the overall control for seniors during any movements in virtual reality</p>
                     <p><strong>price</strong> £15-£30</p>
                     <br>
-                    <h4>prescription lens inserts</h4>
+                    <h4><strong>prescription lens inserts</strong></h4>
                     <p>To improve your experience even more, these are a key for seniors with prescription glasses. You can easily attach them on top of the VR lenses. Prescription lens insets increases the field of view for glasses wearers and improves the comfort levels drastically. </p>
                     <p><strong>price</strong> £40-£75 + </p>
                     <br>
-                    <h4> Head strap</h4>
+                    <h4> <strong>Head strap</strong></h4>
                     <p>This improves the comfort of the VR headset overall</p>
                     <p><strong>price</strong> £30-£40 </p>
                 </div> 
@@ -158,8 +157,7 @@
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19002.79342795758!2d-2.3667624256836075!3d53.462219399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487baf17adf9d2cd%3A0x314b7abbb6993286!2smeetspaceVR%20(ft%20Zero%20Latency)!5e0!3m2!1sen!2suk!4v1705073307458!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="mapi"></iframe>
 
-
-          <!-- Footer-->
+        
   <footer class="social-contact_us">
 
     <p class="guide-text-footer">
