--- a/Set-up-guide.html
+++ b/Set-up-guide.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>New Age - Start Bootstrap Theme</title>
+        <title>Set Up Guide</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
@@ -28,10 +28,10 @@
                 <div class="collapse navbar-collapse mobile-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0 mobile-navabr">
                         <li class="nav-item"><a class="nav-link me-lg-3" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-one.html">Introduction</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-two.html">VR Set Up Guide</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-three.html">Benefits</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="page-four.html">Resources</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="Introduction.html">Introduction</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="Set-up-guide.html">VR Set Up Guide</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="Benefits.html">Benefits</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="RecommendedApps.html">Recommended Apps</a></li>
                     </ul>
 
                 </div>
